Kubernetes/loadbalancer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar
        image: gcr.io/<project_id>/hello-app:bar-1
        ports:
        - containerPort: 8080
