Kubernetes/loadbalancer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
